--- a/web/src/pages/Main.scss
+++ b/web/src/pages/Main.scss
@@ -8,12 +8,15 @@
   width: 100%;
   height: 776px;
 }
+.mainCont {
+  position: relative;
+  top: 100px;
+}
 
 // 기본 section title
 .title {
-  margin-bottom: 16px;
   font-weight: bold;
-  color: $color-text;
+  color: $color-text-white;
   span {
     margin-left: 8px;
     @extend h6;
@@ -24,73 +27,97 @@
 
 // mainSection
 .mainSection {
-  background: linear-gradient(
-    rgba($color-primary-variant, 1) 0%,
-    rgba($color-primary-variant, 1) 30%,
-    rgba($color-primary, 1) 100%
-  );
+  background-color: $color-primary-variant;
 }
 
 // bannerSection
-.HeroBanner {
+.heroBanner {
+  position: relative;
   width: 100%;
-  height: 744px;
+  height: 920px;
+  max-height: calc(100vh - 100px);
   .layout,
   .bannerBg {
     height: 100%;
-    padding-top: 128px;
-  }
-  .layout {
-    position: relative;
   }
   .bannerBg {
-    position: absolute;
-    top: 0;
-    right: 0;
-    overflow: hidden;
+    @include flex($justifyContent: center);
     img {
       height: 100%;
-      -webkit-mask-image: linear-gradient(
-        90deg,
-        rgba($color-primary-variant, 0) 0%,
-        rgba($color-primary-variant, 1) 50%,
-        rgba($color-primary-variant, 1) 100%
-      );
     }
   }
   .bannerCont {
-    @include flex(
-      $direction: column,
-      $justifyContent: center,
-      $alignItems: flex-start
-    );
-    position: relative;
-    width: 40%;
-    height: 100%;
+    @include flex();
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 128px;
     z-index: 1;
+    background-color: rgba($color-primary-variant, 0.7);
   }
-  .titleLogo {
-    height: 256px;
-    margin-bottom: 32px;
+  .bannerList {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr 1fr;
+    height: 100%;
   }
-  .titleKor {
+  .banner {
+    position: relative;
+    padding: 24px;
+    @include flex();
+    column-gap: 16px;
+    flex-grow: 1;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    &:first-of-type {
+      flex-grow: 2;
+      &::before {
+        content: "";
+        width: 96px;
+        height: 96px;
+        background: url(../../public/images/icon_play.svg) center/contain
+          no-repeat;
+      }
+      h5 {
+        @extend h2;
+      }
+    }
+  }
+  .banner + .banner::before {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1px;
+    height: 100%;
+    background-color: rgba($color-text-white, 0.1);
+  }
+  .title {
+    width: 100%;
+  }
+  .titleName,
+  .titleDescription {
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  .titleName {
     color: $color-text-white;
   }
-  .titleEng {
+  .titleDescription {
     margin-top: 12px;
     color: $color-text-light;
-  }
-  .ticketing {
-    margin-top: 32px;
-    box-shadow: 4px 8px 16px rgba($color-primary-variant, 0.5);
   }
 }
 
 // movieSection
 .movieSection {
   width: 100%;
-  border-radius: 40px 40px 0 0;
-  background-color: $color-surface;
+  background-color: $color-primary-variant;
   .layout {
     @include flex(
       $direction: column,
@@ -98,19 +125,19 @@
       $alignItems: flex-start
     );
     height: 100%;
-    padding: 48px 0;
+    padding: 80px 24px;
   }
-  .movieSlide {
-    position: relative;
-    width: 100%;
-    height: 440px;
-    overflow: hidden;
-  }
+  // .movieSlide {
+  //   position: relative;
+  //   width: 100%;
+  //   height: 440px;
+  //   overflow: hidden;
+  // }
   .movieList {
-    display: flex;
-    column-gap: 16px;
-    position: absolute;
-    height: 400px;
+    @include flex($justifyContent: center, $wrap: wrap);
+    row-gap: 60px;
+    column-gap: 40px;
+    width: 100%;
   }
   .movie,
   .movieCont,
@@ -121,12 +148,12 @@
     @include flex($direction: column, $justifyContent: space-between);
     position: relative;
     width: 256px;
-    height: 100%;
+    padding: 8px;
     &:nth-of-type(1) {
       // 1위
       box-shadow: 4px 8px 16px rgba($color-primary-variant, 0.5);
-      margin-right: 16px;
-      transform: scale(1.04);
+      // margin-right: 16px;
+      // transform: scale(1.04);
       transform-origin: top left;
       &,
       .movieCont,
@@ -139,56 +166,69 @@
     }
   }
   .posterImg {
-    padding: 4px;
     width: 100%;
+    height: 348px;
   }
   .movieCont {
-    @include flex($justifyContent: space-between);
-    position: absolute;
+    @include flex($direction: column, $alignItems: flex-start);
+    position: relative;
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 40px;
-    padding: 4px 16px 0 56px;
+    padding: 4px 8px;
   }
   .movieRank {
     @include flex($justifyContent: center);
     position: absolute;
     left: 0;
-    bottom: 0;
-    width: 48px;
-    height: 56px;
+    top: 0;
+    width: 40px;
+    height: 48px;
     padding-top: 4px;
     color: $color-text-white;
-    h3 {
+    transform: translate(-1%, -99%);
+    h4 {
       font-weight: bold;
     }
   }
-  .moviePer {
+  .movieName {
+    font-weight: bold;
     color: $color-text-white;
-    span {
-      @extend p;
-      opacity: 0.7;
-    }
+    line-height: 40px;
+  }
+  .movueDescription {
+    @include flex($justifyContent: space-between);
+    color: $color-text-white;
+    width: 100%;
   }
   .movieStar {
     @include flex($justifyContent: center);
     color: $color-text-white;
     opacity: 0.7;
     img {
-      height: 24px;
+      height: 16px;
     }
   }
 }
 
 .eventSection {
+  background-color: $color-primary;
   .layout {
-    @include flex(
-      $direction: column,
-      $justifyContent: center,
-      $alignItems: flex-start
-    );
+    @include flex($direction: column);
+    row-gap: 40px;
     height: 100%;
+    padding: 80px 24px;
+  }
+  .title {
+    @include flex($direction: column);
+    h3 {
+      color: $color-text-white-dark;
+    }
+    // h6 {
+    //   margin-top: 12px;
+    //   font-weight: normal;
+    //   color: $color-text-white-dark;
+    // }
   }
   .eventCont {
     @include flex($justifyContent: space-between, $alignItems: flex-start);
@@ -196,57 +236,63 @@
     width: 100%;
     height: 512px;
   }
-  .eventInfo {
-    @include flex(
-      $direction: column,
-      $justifyContent: flex-start,
-      $alignItems: flex-start
-    );
-    row-gap: 32px;
-    width: 32%;
-    height: 100%;
-  }
-  .eventTitle {
-    color: $color-primary;
-    h3 {
-      margin-bottom: 16px;
-    }
-  }
-  .eventsSub {
-    color: $color-text-light;
-    h5 {
-      line-height: 28px;
-    }
-    .eventDate {
-      margin-top: 8px;
-    }
-  }
+  // .eventInfo {
+  //   @include flex(
+  //     $direction: column,
+  //     $justifyContent: flex-start,
+  //     $alignItems: flex-start
+  //   );
+  //   row-gap: 32px;
+  //   width: 32%;
+  //   height: 100%;
+  // }
+  // .eventTitle {
+  //   color: $color-primary;
+  //   h3 {
+  //     margin-bottom: 16px;
+  //   }
+  // }
+  // .eventsSub {
+  //   color: $color-text-light;
+  //   h5 {
+  //     line-height: 28px;
+  //   }
+  //   .eventDate {
+  //     margin-top: 8px;
+  //   }
+  // }
   .eventList {
-    @include flex($justifyContent: center);
-    column-gap: 16px;
-    width: 64%;
-    height: 512px;
+    @include flex($direction: column);
+    row-gap: 24px;
+    width: 100%;
+    height: 100%;
   }
   .eventScreen {
-    width: 720px;
-    height: 100%;
-    background-color: $color-primary-variant;
-    &:hover {
-      filter: brightness(0.3);
+    @include flex();
+    column-gap: 24px;
+    width: 100%;
+    height: 60%;
+    .event {
+      width: 50%;
+      height: 100%;
     }
   }
   .eventNav {
-    @include flex($direction: column, $justifyContent: flex-start);
-    row-gap: 16px;
-    width: 400px;
-    height: 100%;
+    @include flex();
+    column-gap: 24px;
+    width: 100%;
+    height: 40%;
     overflow: hidden;
+    .event {
+      width: 50%;
+      height: 100%;
+    }
   }
   .event {
     width: 100%;
     height: 120px;
     background-color: $color-surface;
-    box-shadow: 4px 8px 16px rgba($color-primary-variant, 0.5);
+    // box-shadow: 4px 8px 16px rgba($color-primary-variant, 0.5);
     &:hover {
       filter: brightness(0.3);
     }
@@ -261,65 +307,70 @@
   }
 }
 
-.curationSection {
-  background-color: $color-primary-variant;
-  .layout {
-    @include flex(
-      $direction: column,
-      $justifyContent: center,
-      $alignItems: flex-start
-    );
-    height: 100%;
-  }
-  .curationCont {
-    @include flex($justifyContent: flex-start, $alignItems: flex-start);
-    column-gap: 104px;
-    width: 100%;
-    height: 512px;
-  }
-  .curationInfo {
-    @include flex($direction: column, $alignItems: flex-start);
-    height: 100%;
-  }
-  .curationTitle {
-    line-height: 44px;
-    color: $color-text-light;
-  }
-  .curationtSlide {
-    position: relative;
-    height: 512px;
-  }
-  .curationtList {
-    @include flex();
-    column-gap: 16px;
-    position: absolute;
-    height: 100%;
-  }
-  .curationCard {
-    width: 400px;
-    height: 100%;
-    background-color: $color-surface;
-    box-shadow: 4px 8px 16px rgba($color-primary, 0.5);
-    &:hover {
-      filter: brightness(0.3);
-    }
-  }
-}
+// .curationSection {
+//   background-color: $color-primary-variant;
+//   .layout {
+//     @include flex(
+//       $direction: column,
+//       $justifyContent: center,
+//       $alignItems: flex-start
+//     );
+//     height: 100%;
+//   }
+//   .curationCont {
+//     @include flex($justifyContent: flex-start, $alignItems: flex-start);
+//     column-gap: 104px;
+//     width: 100%;
+//     height: 512px;
+//   }
+//   .curationInfo {
+//     @include flex($direction: column, $alignItems: flex-start);
+//     height: 100%;
+//   }
+//   .curationTitle {
+//     line-height: 44px;
+//     color: $color-text-light;
+//   }
+//   .curationtSlide {
+//     position: relative;
+//     height: 512px;
+//   }
+//   .curationtList {
+//     @include flex();
+//     column-gap: 16px;
+//     position: absolute;
+//     height: 100%;
+//   }
+//   .curationCard {
+//     width: 400px;
+//     height: 100%;
+//     background-color: $color-surface;
+//     box-shadow: 4px 8px 16px rgba($color-primary, 0.5);
+//     &:hover {
+//       filter: brightness(0.3);
+//     }
+//   }
+// }
 
 .guideSection {
-  @include flex($alignItems: flex-start);
   width: 100%;
-  height: 528px;
-  padding: 32px 0;
+  height: 480px;
+  padding: 80px 24px;
+  .layout {
+    @include flex($direction: column);
+  }
+  .title {
+    color: $color-text;
+  }
   .guideList {
     @include flex($alignItems: flex-start);
-    column-gap: 16px;
+    column-gap: 40px;
     width: 100%;
   }
   .guideCard {
     width: 296px;
     height: 296px;
-    background-color: $color-primary;
+
     &:hover {
       filter: brightness(0.3);
     }
