--- a/web/src/components/Header.module.scss
+++ b/web/src/components/Header.module.scss
@@ -4,7 +4,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
+  min-width: 1280px;
   height: 100px;
   z-index: 1000;
 }
@@ -12,18 +13,6 @@
 .layout {
   @include flex($justifyContent: space-between);
   height: 100%;
-}
-
-.leftCont {
-  display: flex;
-  column-gap: 72px;
-  align-items: center;
-}
-
-.rightCont {
-  display: flex;
-  column-gap: 24px;
-  align-items: center;
 }
 
 .ci a {
@@ -35,6 +24,96 @@
   font-size: 0;
   line-height: 0;
   background: url(../../public/logo_default.png) center/contain no-repeat;
+}
+
+Nav {
+  height: 100%;
+}
+
+.gnbList {
+  display: flex;
+  position: relative;
+  height: 100%;
+  margin: auto;
+}
+
+.gnbTitle {
+  @include flex($justifyContent: center);
+  position: relative;
+  height: 100%;
+  padding: 0 40px;
+  transition: 0.2s;
+  a {
+    font-size: 18px;
+    color: $color-text;
+    transition: 0.2s;
+  }
+  &:hover {
+    background-color: $color-primary-variant;
+    a {
+      transform: translate(0, 2px);
+    }
+    .gnbBody {
+      display: flex;
+    }
+  }
+}
+
+// .gnbAll {
+//   display: flex;
+//   svg,
+//   div {
+//     width: 52px;
+//     height: 52px;
+//     fill: $color-text;
+//   }
+// }
+
+.gnbSearch {
+  background: url(../../public//icon_search.svg) center/contain no-repeat;
+  background-size: 60%;
+  width: 52px;
+  height: 52px;
+}
+
+.gnbCalendar {
+  background: url(../../public/icon_calendar.svg) center/contain no-repeat;
+  background-size: 60%;
+}
+
+.gnbPerson {
+  background: url(../../public/icon_person.svg) center/contain no-repeat;
+  background-size: 60%;
+}
+
+.gnbBody {
+  @include flex($justifyContent: center);
+  display: none;
+  column-gap: 24px;
+  position: absolute;
+  bottom: 0;
+  width: 200vw;
+  height: 48px;
+  transform: translate(0, 100%);
+  background-color: rgba($color-primary-variant, 0.8);
+  li {
+    position: relative;
+    bottom: -0.68ex;
+    font-size: 14px;
+    color: $color-text-white-dark;
+    &:hover {
+      color: $color-text-white;
+    }
+  }
+  &:hover {
+    display: flex;
+  }
+}
+
+.rightCont {
+  display: flex;
+  column-gap: 24px;
+  align-items: center;
 }
 
 .utilArea {
@@ -55,98 +134,6 @@
     &:hover {
       color: $color-text-white;
     }
-  }
-}
-
-.gnbList {
-  display: flex;
-  column-gap: 72px;
-  position: relative;
-  margin: auto;
-}
-
-.gnbTitle {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  link,
-  svg {
-    fill: $color-text;
-  }
-  a {
-    font-size: 18px;
-    color: $color-text;
-  }
-  a::after {
-    content: "";
-    box-sizing: border-box;
-    position: absolute;
-    left: 0;
-    bottom: 12px;
-    margin: 0 auto;
-    width: 0;
-    height: 1px;
-    background-color: $color-text;
-    transition: all 0.3s;
-  }
-  &:hover {
-    a::after {
-      width: 100%;
-    }
-    .gnbBody {
-      display: flex;
-    }
-  }
-}
-
-.gnbAll {
-  display: flex;
-  svg,
-  div {
-    width: 52px;
-    height: 52px;
-    fill: $color-text;
-  }
-}
-
-.gnbSearch {
-  background: url(../../public//icon_search.svg) center/contain no-repeat;
-  background-size: 60%;
-  width: 52px;
-  height: 52px;
-}
-
-.gnbCalendar {
-  background: url(../../public/icon_calendar.svg) center/contain no-repeat;
-  background-size: 60%;
-}
-
-.gnbPerson {
-  background: url(../../public/icon_person.svg) center/contain no-repeat;
-  background-size: 60%;
-}
-
-.gnbBody {
-  display: none;
-  column-gap: 24px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  padding-top: 8px;
-  width: 200%;
-  transform: translateY(100%);
-  li {
-    color: $color-text;
-    font-size: 14px;
-    white-space: pre;
-    color: $color-text-light;
-    &:hover {
-      display: flex;
-    }
-  }
-  &:hover {
-    display: flex;
   }
 }
 
