--- a/web/src/pages/Main.scss
+++ b/web/src/pages/Main.scss
@@ -1,16 +1,16 @@
 @import "../styles/utils";
 
 // 기본 section
-.eventSection,
-.curationSection,
-.curationSection {
-  position: relative;
-  width: 100%;
-  height: 776px;
-}
+// .curationSection,
+// .curationSection {
+//   position: relative;
+//   width: 100%;
+//   height: 776px;
+// }
 .mainCont {
   position: relative;
   top: 100px;
+  background-color: $color-surface-dim;
 }
 
 // 기본 section title
@@ -25,6 +25,12 @@
   }
 }
 
+.viewAll {
+  color: $color-text-white-dark;
+  margin: 64px 0;
+  text-decoration: underline;
+}
+
 // mainSection
 .mainSection {
   background-color: $color-primary-variant;
@@ -32,6 +38,7 @@
 
 // bannerSection
 .heroBanner {
+  @include flex($justifyContent: center);
   position: relative;
   width: 100%;
   height: 920px;
@@ -46,6 +53,24 @@
       height: 100%;
     }
   }
+  .banner-prev,
+  .banner-next {
+    position: absolute;
+    width: 108px;
+    height: 108px;
+    transform: translate(0, -64px);
+    opacity: 0.6;
+  }
+  .banner-prev {
+    left: 24px;
+    background: url(../../public/images/icon_arrow_left.svg) center/contain
+      no-repeat;
+  }
+  .banner-next {
+    right: 24px;
+    background: url(../../public/images/icon_arrow_right.svg) center/contain
+      no-repeat;
+  }
   .bannerCont {
     @include flex();
     position: absolute;
@@ -54,7 +79,10 @@
     width: 100%;
     height: 128px;
     z-index: 1;
-    background-color: rgba($color-primary-variant, 0.7);
+    background-color: rgba($color-primary-variant, 0.8);
+    .layout {
+      position: relative;
+    }
   }
   .bannerList {
     display: grid;
@@ -70,6 +98,9 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+    &:hover {
+      background-color: rgba($color-primary, 0.4);
+    }
     &:first-of-type {
       flex-grow: 2;
       &::before {
@@ -81,6 +112,9 @@
       }
       h5 {
         @extend h2;
+      }
+      &:hover {
+        background-color: unset;
       }
     }
   }
@@ -114,25 +148,46 @@
   }
 }
 
+.quickMenu {
+  position: absolute;
+  right: 240px;
+  width: 96px;
+  background-color: rgba($color-primary, 0.8);
+  transform: translate(0, -64px);
+  li {
+    @include flex($direction: column, $justifyContent: center);
+    row-gap: 12px;
+    position: relative;
+    width: 100%;
+    height: 92px;
+    img {
+      height: 36px;
+    }
+    p {
+      color: rgba($color-text-white, 0.8);
+    }
+    & + li::before {
+      content: "";
+      display: inline-block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: rgba($color-text-white, 0.1);
+    }
+  }
+}
+
 // movieSection
 .movieSection {
   width: 100%;
   background-color: $color-primary-variant;
   .layout {
-    @include flex(
-      $direction: column,
-      $justifyContent: center,
-      $alignItems: flex-start
-    );
+    @include flex($direction: column, $justifyContent: center);
     height: 100%;
     padding: 80px 24px;
   }
-  // .movieSlide {
-  //   position: relative;
-  //   width: 100%;
-  //   height: 440px;
-  //   overflow: hidden;
-  // }
   .movieList {
     @include flex($justifyContent: center, $wrap: wrap);
     row-gap: 60px;
@@ -151,23 +206,31 @@
     padding: 8px;
     &:nth-of-type(1) {
       // 1위
-      box-shadow: 4px 8px 16px rgba($color-primary-variant, 0.5);
-      // margin-right: 16px;
-      // transform: scale(1.04);
+      box-shadow: 4px 8px 16px rgba($color-primary-variant, 0.6);
       transform-origin: top left;
       &,
       .movieCont,
       .movieRank {
+        color: $color-text-white;
         background-color: $color-primary;
+      }
+      .movieName,
+      .movueDescription {
+        color: $color-text-white;
       }
     }
     &:hover {
-      filter: brightness(0.3);
+      .movieInfo {
+        opacity: 1;
+      }
     }
   }
   .posterImg {
     width: 100%;
     height: 348px;
+  }
+  .movie {
+    position: relative;
   }
   .movieCont {
     @include flex($direction: column, $alignItems: flex-start);
@@ -192,14 +255,26 @@
     }
   }
   .movieName {
+    width: 100%;
     font-weight: bold;
-    color: $color-text-white;
+    color: $color-text-white-dark;
     line-height: 40px;
+    h5 {
+      width: 100%;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
   .movueDescription {
     @include flex($justifyContent: space-between);
-    color: $color-text-white;
+    color: $color-text-light;
     width: 100%;
+  }
+  .movieGenre {
+    padding-right: 8px;
+    margin-right: 8px;
+    border-right: solid 1px rgba($color-text-white, 0.4);
   }
   .movieStar {
     @include flex($justifyContent: center);
@@ -209,20 +284,40 @@
       height: 16px;
     }
   }
+  .movieInfo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(#000000, 0.8);
+    opacity: 0;
+    transition: 0.2s;
+    .veiwDetail,
+    .reserveTicket {
+      @include flex($justifyContent: center);
+      width: 100%;
+      height: 50%;
+      color: $color-text-white-dark;
+      &:hover {
+        background-color: rgba($color-primary, 0.8);
+      }
+    }
+  }
 }
 
 .eventSection {
   background-color: $color-primary;
   .layout {
     @include flex($direction: column);
-    row-gap: 40px;
+    row-gap: 36px;
     height: 100%;
-    padding: 80px 24px;
+    padding: 144px 24px 80px;
   }
   .title {
     @include flex($direction: column);
-    h3 {
-      color: $color-text-white-dark;
+    h4 {
+      color: $color-text-white;
     }
     // h6 {
     //   margin-top: 12px;
@@ -231,10 +326,9 @@
     // }
   }
   .eventCont {
-    @include flex($justifyContent: space-between, $alignItems: flex-start);
+    @include flex($direction: column);
     column-gap: 104px;
     width: 100%;
-    height: 512px;
   }
   // .eventInfo {
   //   @include flex(
@@ -266,6 +360,12 @@
     row-gap: 24px;
     width: 100%;
     height: 100%;
+    .event {
+      overflow: hidden;
+    }
+    img {
+      height: 100%;
+    }
   }
   .eventScreen {
     @include flex();
@@ -273,7 +373,6 @@
     width: 100%;
     height: 60%;
     .event {
-      width: 50%;
       height: 100%;
     }
   }
@@ -353,23 +452,22 @@
 // }
 
 .guideSection {
+  @include flex($direction: column);
+  row-gap: 36px;
   width: 100%;
-  height: 480px;
   padding: 80px 24px;
-  .layout {
-    @include flex($direction: column);
-  }
+
   .title {
     color: $color-text;
   }
   .guideList {
     @include flex($alignItems: flex-start);
-    column-gap: 40px;
-    width: 100%;
+    column-gap: 24px;
   }
   .guideCard {
-    width: 296px;
-    height: 296px;
+    width: 360px;
+    height: 160px;
+    background-color: #cccccc;
 
     &:hover {
       filter: brightness(0.3);
@@ -379,5 +477,5 @@
 
 footer {
   height: 200px;
-  background: #999999;
+  background: #444444;
 }
