[퍼블리싱] 메인 디자인 추가 수정

--- a/web/src/pages/SignIn.scss
+++ b/web/src/pages/SignIn.scss
@@ -5,7 +5,7 @@
   width: 100vw;
   height: 100vh;
   text-align: center;
-  background-color: var(--color-primary-variant);
+  background-color: $color-primary-variant;
   .content {
     display: inline-flex;
     padding: 56px 52px;
