[퍼블리싱] 마이페이지 레이아웃

--- a/web/src/assets/scss/style.scss
+++ b/web/src/assets/scss/style.scss
@@ -3,6 +3,11 @@
 @import "./mixin";
 @import "./fonts";
 
+body {
+  overflow-x: hidden;
+  background-color: $color-surface;
+}
+
 .layout {
   width: 92%;
   max-width: 1280px;
