--- a/web/src/assets/scss/_vars.scss
+++ b/web/src/assets/scss/_vars.scss
@@ -8,8 +8,9 @@ $color-surface-d: #ffffff;
 $color-surface: #ffffff;
 $color-surface-b: #ffffff;
 
-$color-text-l: #727272;
-$color-text: #4e4e4e;
+$color-text-ll: #cccccc;
+$color-text-l: #7c7c7c;
+$color-text: #565656;
 $color-text-d: #000000;
 
 $color-text-wd: #cccccc;
