--- a/web/src/components/Header.module.scss
+++ b/web/src/components/Header.module.scss
@@ -1,9 +1,9 @@
 @import "../assets/scss/style.scss";
 
 .mainHeader {
-  position: fixed;
-  top: 0;
-  left: 0;
+  // position: fixed;
+  // top: 0;
+  // left: 0;
   width: 100%;
   min-width: 1280px;
   height: 100px;
