--- a/web/src/pages/MyPage.module.scss
+++ b/web/src/pages/MyPage.module.scss
@@ -12,102 +12,291 @@ main::before {
 }
 
 .layout {
-  height: 100vh;
-  padding-top: 100px;
   display: table;
   table-layout: fixed;
 }
 
-.leftContainer {
+.nav {
   display: table-cell;
-  padding: 64px 32px;
-  width: 240px;
+  padding: 40px;
+  width: 288px;
   height: 100%;
   vertical-align: top;
   border-right: solid 1px $color-text-wd;
   border-left: solid 1px $color-text-wd;
-}
-.leftContent {
-  @include flex($direction: column, $align: flex-start);
-  row-gap: 40px;
-  width: 100%;
-  height: 100%;
-}
-
-.liTitle {
-  font-weight: bold;
-  margin-bottom: 52px;
-  color: $color-text;
-}
-
-.userContent {
-  @include flex();
-  width: 100%;
-  column-gap: 16px;
-  border-bottom: solid 1px $color-text-wd;
-  padding-bottom: 24px;
-}
-
-.userImg {
-  width: 48px;
-  height: 48px;
-  background-color: $color-primary;
-}
-
-.userInfo {
-  color: $color-text;
-  @include flex($direction: column, $align: flex-start);
-  row-gap: 8px;
-}
-
-.pageMenu {
-  @include flex($direction: column, $align: flex-start);
-  row-gap: 8px;
-  ul {
+  .list {
     @include flex($direction: column, $align: flex-start);
-    row-gap: 16px;
-    width: 100%;
-    padding: 12px 0;
-    @extend h6;
-    color: $color-text;
-    opacity: 0.6;
-    &.selected {
-      background-color: #eff1f6;
-      opacity: 1;
-      font-weight: bold;
+    row-gap: 8px;
+    ul {
+      @include flex($direction: column, $align: flex-start);
+      row-gap: 16px;
+      width: 100%;
+      padding: 12px 0;
+      @extend h6;
+      color: $color-text-l;
+      &.selected {
+        color: $color-primary;
+        font-weight: bold;
+        text-decoration: underline;
+      }
+    }
+    li {
+      @extend p;
     }
   }
-  li {
-    @extend p;
+}
+
+.content {
+  display: table-cell;
+  padding: 40px 68px;
+  background-color: #eff1f6;
+  .location {
+    margin-bottom: 40px;
+    color: $color-text;
+  }
+  .list_con {
+    @include flex($direction: column);
+    row-gap: 36px;
   }
 }
 
-.rightContainer {
-  display: table-cell;
-  padding: 64px 64px;
+.main {
   width: 100%;
-  height: 100%;
-  background-color: #eff1f6;
+  .user {
+    @include flex($justify: space-between, $align: flex-end);
+  }
+  .left_con {
+    @include flex($align: flex-start);
+    column-gap: 28px;
+    .text {
+      @include flex(
+        $direction: column,
+        $justify: space-between,
+        $align: flex-start
+      );
+      height: 144px;
+      h3 {
+        color: $color-primary-v;
+        span {
+          color: $color-primary;
+          font-weight: bold;
+        }
+      }
+    }
+  }
+  .symbol {
+    width: 104px;
+    height: 144px;
+    background: linear-gradient(135deg, #5924b5 2.03%, #751fff 100%);
+    border: solid 1px $color-text-ll;
+  }
+  .link {
+    a {
+      color: $color-text;
+      &:first-child {
+        padding-right: 16px;
+      }
+      & + a {
+        padding-left: 16px;
+        border-left: solid 2px $color-text-ll;
+      }
+      &:last-child {
+        padding-left: 16px;
+      }
+    }
+  }
+  .right_con {
+    @include flex($direction: column, $align: flex-start);
+    row-gap: 4px;
+    li {
+      @include flex($justify: space-between);
+      color: $color-text;
+      column-gap: 16px;
+      width: 100%;
+      &.point {
+        color: $color-primary-v;
+        font-weight: bold;
+      }
+      &:nth-child(2) {
+        margin-bottom: 12px;
+      }
+    }
+  }
 }
 
-.mainContainer {
+.rank {
+  margin: 36px 0;
+  position: relative;
   width: 100%;
-  height: 200px;
-  background-color: $color-primary-v;
-  margin-bottom: 24px;
+  .line {
+    width: 100%;
+    height: 4px;
+    background-color: $color-text-ll;
+  }
+  .dot {
+    @include flex($justify: space-between);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    li {
+      position: relative;
+      margin: 0 40px;
+      height: 100%;
+      aspect-ratio: 1/1;
+      background-color: $color-text-l;
+      p {
+        position: absolute;
+        left: 50%;
+        bottom: -8px;
+        transform: translate(-50%, 100%);
+        color: $color-text-ll;
+      }
+
+      &.on {
+        background-color: rgba($color-text-w, 0.6);
+        p {
+          color: $color-primary;
+          font-weight: bold;
+        }
+      }
+    }
+  }
+  .percent {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(135deg, #5924b5 2.03%, #751fff 100%);
+  }
 }
 
-.subContainer {
+.sub {
+  @include flex();
   width: 100%;
-  height: 64px;
-  // background-color: $color-primary;
-  margin-bottom: 24px;
+  border: solid 1px $color-text-ll;
+  height: 144px;
+  padding: 16px 0;
+  color: $color-text-l;
+  background-color: $color-surface;
+  .title {
+    margin-bottom: 8px;
+    color: $color-text;
+  }
+  & > div {
+    width: 50%;
+    height: 100%;
+    @include flex($justify: center);
+    & + div {
+      border-left: solid 1px $color-text-ll;
+    }
+  }
+  .left_con {
+    padding: 0 36px;
+    ul {
+      @include flex($justify: space-between);
+      width: 100%;
+      li {
+        @include flex($direction: column);
+        row-gap: 4px;
+        img {
+          width: 40px;
+          height: 40px;
+        }
+      }
+    }
+  }
 }
 
-.aContainer,
-.bContainer {
+.container_1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   width: 100%;
-  height: 320px;
-  background-color: white;
-  margin-bottom: 24px;
+  column-gap: 24px;
+  & > div {
+    width: 100%;
+    .title {
+      margin-bottom: 8px;
+      color: $color-primary-v;
+    }
+    .box {
+      @include flex($direction: column, $align: flex-start);
+      row-gap: 24px;
+      width: 100%;
+      height: 360px;
+      background-color: $color-surface;
+      padding: 36px;
+      border: solid 1px $color-text-ll;
+    }
+    .group {
+      .name {
+        margin-bottom: 16px;
+        color: $color-text;
+      }
+      .item {
+        @include flex();
+        gap: 12px;
+        li {
+          @extend p;
+          color: $color-text-l;
+          padding: 4px 20px;
+          border: solid 1px $color-text-ll;
+        }
+      }
+    }
+    .category {
+      width: 100%;
+      .item {
+        width: 100%;
+        @include flex($justify: space-between);
+        li {
+          @include flex($direction: column);
+          row-gap: 4px;
+          text-align: center;
+          h4 {
+            color: $color-text;
+            font-weight: bold;
+          }
+          p {
+            color: $color-text-l;
+          }
+        }
+      }
+      .name {
+        color: $color-text;
+        margin-bottom: 16px;
+      }
+      .list {
+        @include flex();
+        column-gap: 16px;
+        height: 160px;
+        width: 100%;
+        li {
+          height: 100%;
+          border: solid 1px $color-text-ll;
+        }
+        img {
+          height: 100%;
+        }
+      }
+    }
+  }
+}
+
+.container_2 {
+  width: 100%;
+  .title {
+    margin-bottom: 8px;
+    color: $color-text;
+  }
+  .box {
+    @include flex($direction: column, $align: flex-start);
+    row-gap: 24px;
+    width: 100%;
+    height: 144px;
+    background-color: $color-surface;
+    padding: 36px;
+  }
 }
