--- a/web/src/assets/scss/_vars.scss
+++ b/web/src/assets/scss/_vars.scss
@@ -1,12 +1,14 @@
 //color
+$color-primary-ll: #7d74c2;
+$color-primary-l: #5e46fe;
 $color-primary: #5924b5;
+$color-primary-d: #46109d;
 $color-primary-v: #150e2c;
 $color-secondary: #00e0f6;
 $color-secondary-v: #00b9cc;
 
-$color-surface-d: #ffffff;
 $color-surface: #ffffff;
-$color-surface-b: #ffffff;
+$color-surface-d: #f1f2f6;
 
 $color-text-ll: #cccccc;
 $color-text-l: #7c7c7c;
