--- a/web/src/assets/scss/setting/_mixin.scss
+++ b/web/src/assets/scss/setting/_mixin.scss
@@ -17,6 +17,14 @@ $left: "-left";
 $right: "-right";
 $bottom: "-bottom";
 
-@mixin line($direction: "", $weight: 1, $color: $color-text-wd) {
+@mixin line($direction: "", $weight: 1, $color: $text-white) {
   border#{$direction}: solid #{$weight}px #{$color}; // solid 오타 수정
+}
+
+.div2 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
