--- a/web/src/components/Navigation.module.scss
+++ b/web/src/components/Navigation.module.scss
@@ -4,7 +4,7 @@
   @include flex();
   width: 100%;
   height: 48px;
-  border-bottom: solid 1px $color-text-wd;
+  border-bottom: solid 1px $text-white;
   .list {
     @include flex();
     column-gap: 4px;
@@ -16,7 +16,7 @@
     span {
       vertical-align: middle;
       position: relative;
-      color: $color-text-l;
+      color: $text-light;
     }
     span::before {
       display: inline-block;
