--- a/web/src/pages/Ticketing.module.scss
+++ b/web/src/pages/Ticketing.module.scss
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100%;
   padding-top: 100px;
-  background-color: $color-primary-v;
+  background-color: $primary-variant;
 }
 
 .page {
